# web-music-player

./: .gitignore  Cargo.toml  README.md  index.html
public/_app/: version.json
public/_app/immutable/assets/: 0.CRWqpqox.css  2.BuqcJk5r.css  _layout.MAGuidFr.css
public/_app/immutable/chunks/: entry.BSTRiUB-.js  entry.BYKYMK_Q.js  entry.odws50gj.js  index.BWS1mEJz.js  index.BqczruAr.js  index.CP6_dmxL.js  index.CUqkIqGt.js  scheduler.BNPbXMe9.js  scheduler.za2E7YQ0.js  settings.BO4-fU2E.js  settings.CxOCyp68.js
public/_app/immutable/entry/: app.BKbH5oNu.js  app.Ck7etrbX.js  app.DVgCiYcO.js  start.BdEPoP0F.js  start.BgAMVdod.js  start.RHraqJq1.js
public/_app/immutable/nodes/: 0.2E-voG4z.js  0.CHD9EQd7.js  0.uxJJiT-z.js  1.C9X7PPRX.js  1.DgpiHfvv.js  1.VjV_f2-k.js  2.BKRXMEmZ.js  2.DAuJgaSM.js  2.fMdQFGWq.js
src/: main.rs  utils.rs
